--- a/requirements_osx_python3.5.1.txt
+++ b/requirements_osx_python3.5.1.txt
@@ -1,144 +1,144 @@
-yappi 0.94
-xlrd 1.1.0
-WTForms 1.0.5
-widgetsnbextension 1.2.3
-wheel 0.30.0
-Werkzeug 0.11.10
-wcwidth 0.1.7
-virtualenv-clone 0.2.6
-urllib3 1.23
-traitlets 4.2.2
-tqdm 4.19.9
-tornado 4.3
-Theano 1.0.1
-terminado 0.6
-termcolor 1.1.0
-tensorflow 1.6.0
-tensorboard 1.6.0
-sympy 1.0
-stevedore 1.27.1
-statsmodels 0.8.0
-SpoofMAC 2.1.1
-sklearn 0.0
-six 1.11.0
-simplegeneric 0.8.1
-simpleflock 0.0.3
-simhash 1.8.0
-setuptools 38.5.2
-selenium 3.8.1
-seaborn 0.7.1
-scoop 0.7.1.1
-scipy 1.0.1
-scikit-learn 0.19.1
-rpy2 2.8.3
-robobrowser 0.5.3
-requests 2.11.1
-redis 2.10.6
-qtconsole 4.2.1
-pyzmq 15.3.0
-PyYAML 3.11
-pyvttbl 0.5.2.2
-pytz 2018.3
-pytools 2016.2.6
-python-socketio 1.9.0
-python-igraph 0.7.1.post6
-python-gssapi 0.6.4
-python-engineio 2.0.4
-python-dateutil 2.7.2
-pytest 3.0.5
-pystaggrelite3 0.1.3
-pyparsing 2.1.5
-pyOpenSSL 18.0.0
-pyopencl 2016.2
-PyNaCl 1.2.1
-pymc3 3.3
-Pygments 2.1.3
-pyemd 0.4.4
-pycparser 2.17
-pyasn1 0.4.2
-py 1.4.31
-ptyprocess 0.5.1
-psutil 5.0.1
-protobuf 3.5.2
-prompt-toolkit 1.0.3
-ply 3.9
-pip 9.0.2
-Pillow 5.0.0
-pickleshare 0.7.2
-pexpect 4.2.0
-pbr 3.1.1
-patsy 0.5.0
-paramiko 2.4.1
-pandas 0.22.0
-odfpy 1.3.5.dev0
-numpy 1.14.2
-numexpr 2.6.1
-notebook 4.2.1
-nltk 3.2.2
-networkx 1.11
-ndg-httpsclient 0.5.0
-nbformat 4.0.1
-nbconvert 4.2.0
-mpmath 0.19
-mistune 0.7.3
-matplotlib 1.5.1
-MarkupSafe 0.23
-Markdown 2.6.11
-lmfit 0.9.5
-jupyter 1.0.0
-jupyter-nbextensions-configurator 0.2.3
-jupyter-latex-envs 1.3.6
-jupyter-highlight-selected-word 0.0.7
-jupyter-core 4.1.0
-jupyter-contrib-nbextensions 0.2.3
-jupyter-contrib-core 0.3.0
-jupyter-console 5.0.0
-jupyter-client 4.3.0
-jsonschema 2.5.1
-joblib 0.11
-Jinja2 2.8
-itsdangerous 0.24
-ipywidgets 5.1.5
-ipython 5.0.0
-ipython-genutils 0.1.0
-ipykernel 4.3.1
-imageio 2.2.0
-idna 2.6
-html5lib 0.9999999
-h5py 2.7.1
-grpcio 1.10.0
-greenlet 0.4.2
-graphistry 0.9.30
-gast 0.2.0
-future 0.15.2
-Flask 0.11.1
-Flask-WTF 0.9.5
-Flask-SocketIO 2.9.6
-fastdtw 0.3.0
-eventlet 0.17.4
-enum34 1.1.6
-entrypoints 0.2.2
-dtw 1.2
-docopt 0.6.2
-dictset 0.3.1.2
-decorator 4.0.10
-Cython 0.25.2
-cycler 0.10.0
-cryptography 2.2.2
-coverage 3.7.1
-colorlover 0.2.1
-click 6.6
-cffi 1.9.1
-Bottleneck 1.2.0
-bottle 0.12.13
-boto 2.48.0
-bleach 1.5.0
-bibtexparser 0.6.2
-beautifulsoup4 4.6.0
-bcrypt 3.1.4
-base 1.0.4
-astor 0.6.2
-asn1crypto 0.24.0
-appnope 0.1.0
-appdirs 1.4.0
-absl-py 0.1.11
+yappi==0.94
+xlrd==1.1.0
+WTForms==1.0.5
+widgetsnbextension==1.2.3
+wheel==0.30.0
+Werkzeug==0.11.10
+wcwidth==0.1.7
+virtualenv-clone==0.2.6
+urllib3==1.23
+traitlets==4.2.2
+tqdm==4.19.9
+tornado==4.3
+Theano==1.0.1
+terminado==0.6
+termcolor==1.1.0
+tensorflow==1.6.0
+tensorboard==1.6.0
+sympy==1.0
+stevedore==1.27.1
+statsmodels==0.8.0
+SpoofMAC==2.1.1
+sklearn==0.0
+six==1.11.0
+simplegeneric==0.8.1
+simpleflock==0.0.3
+simhash==1.8.0
+setuptools==38.5.2
+selenium==3.8.1
+seaborn==0.7.1
+scoop==0.7.1.1
+scipy==1.0.1
+scikit-learn==0.19.1
+rpy2==2.8.3
+robobrowser==0.5.3
+requests==2.11.1
+redis==2.10.6
+qtconsole==4.2.1
+pyzmq==15.3.0
+PyYAML==3.11
+pyvttbl==0.5.2.2
+pytz==2018.3
+pytools==2016.2.6
+python-socketio==1.9.0
+python-igraph==0.7.1.post6
+python-gssapi==0.6.4
+python-engineio==2.0.4
+python-dateutil==2.7.2
+pytest==3.0.5
+pystaggrelite3==0.1.3
+pyparsing==2.1.5
+pyOpenSSL==18.0.0
+pyopencl==2016.2
+PyNaCl==1.2.1
+pymc3==3.3
+Pygments==2.1.3
+pyemd==0.4.4
+pycparser==2.17
+pyasn1==0.4.2
+py==1.4.31
+ptyprocess==0.5.1
+psutil==5.0.1
+protobuf==3.5.2
+prompt-toolkit==1.0.3
+ply==3.9
+pip==9.0.2
+Pillow==5.0.0
+pickleshare==0.7.2
+pexpect==4.2.0
+pbr==3.1.1
+patsy==0.5.0
+paramiko==2.4.1
+pandas==0.22.0
+odfpy==1.3.5.dev0
+numpy==1.14.2
+numexpr==2.6.1
+notebook==4.2.1
+nltk==3.2.2
+networkx==1.11
+ndg-httpsclient==0.5.0
+nbformat==4.0.1
+nbconvert==4.2.0
+mpmath==0.19
+mistune==0.7.3
+matplotlib==1.5.1
+MarkupSafe==0.23
+Markdown==2.6.11
+lmfit==0.9.5
+jupyter==1.0.0
+jupyter-nbextensions-configurator==0.2.3
+jupyter-latex-envs==1.3.6
+jupyter-highlight-selected-word==0.0.7
+jupyter-core==4.1.0
+jupyter-contrib-nbextensions==0.2.3
+jupyter-contrib-core==0.3.0
+jupyter-console==5.0.0
+jupyter-client==4.3.0
+jsonschema==2.5.1
+joblib==0.11
+Jinja2==2.8
+itsdangerous==0.24
+ipywidgets==5.1.5
+ipython==5.0.0
+ipython-genutils==0.1.0
+ipykernel==4.3.1
+imageio==2.2.0
+idna==2.6
+html5lib==0.9999999
+h5py==2.7.1
+grpcio==1.10.0
+greenlet==0.4.2
+graphistry==0.9.30
+gast==0.2.0
+future==0.15.2
+Flask==0.11.1
+Flask-WTF==0.9.5
+Flask-SocketIO==2.9.6
+fastdtw==0.3.0
+eventlet==0.17.4
+enum34==1.1.6
+entrypoints==0.2.2
+dtw==1.2
+docopt==0.6.2
+dictset==0.3.1.2
+decorator==4.0.10
+Cython==0.25.2
+cycler==0.10.0
+cryptography==2.2.2
+coverage==3.7.1
+colorlover==0.2.1
+click==6.6
+cffi==1.9.1
+Bottleneck==1.2.0
+bottle==0.12.13
+boto==2.48.0
+bleach==1.5.0
+bibtexparser==0.6.2
+beautifulsoup4==4.6.0
+bcrypt==3.1.4
+base==1.0.4
+astor==0.6.2
+asn1crypto==0.24.0
+appnope==0.1.0
+appdirs==1.4.0
+absl-py==0.1.11
