--- a/requirements_ubuntu_python3.4.3.txt
+++ b/requirements_ubuntu_python3.4.3.txt
@@ -1,39 +1,54 @@
-backcall==0.1.0
-click==6.7
-cycler==0.10.0
-decorator==4.3.0
-Flask==0.12.2
-gunicorn==19.7.1
-h5py==2.7.1
-ipython==6.5.0
-ipython-genutils==0.2.0
-itsdangerous==0.24
-jedi==0.12.1
-Jinja2==2.9.6
-joblib==0.11
-kiwisolver==1.0.1
-MarkupSafe==1.0
-matplotlib==2.2.2
-numpy==1.13.3
-pandas==0.20.3
-parso==0.3.1
-patsy==0.4.1
-pexpect==4.6.0
-pickleshare==0.7.4
-prompt-toolkit==1.0.15
-ptyprocess==0.6.0
-Pygments==2.2.0
-pymc3==3.3
-pyparsing==2.2.0
-python-dateutil==2.6.1
-pytz==2017.2
-scipy==0.19.1
-seaborn==0.9.0
-simplegeneric==0.8.1
-six==1.11.0
-Theano==1.0.2
-tqdm==4.19.4
-traitlets==4.3.2
-typing==3.6.4
-wcwidth==0.1.7
-Werkzeug==0.12.2
+MySQL-python==1.2.3
+PAM==0.4.2
+Pillow==2.3.0
+Twisted-Core==13.2.0
+Twisted-Web==13.2.0
+adium-theme-ubuntu==0.3.4
+apt-xapian-index==0.45
+argparse==1.2.1
+chardet==2.0.1
+colorama==0.2.5
+command-not-found==0.3
+debtagshw==0.1
+defer==1.0.6
+dirspec==13.10
+duplicity==0.6.23
+greenlet==0.4.11
+html5lib==0.999
+httplib2==0.8
+lockfile==0.8
+lxml==3.3.3
+oauthlib==0.6.1
+oneconf==0.3.7.14.04.1
+pbr==3.1.1
+pexpect==3.1
+piston-mini-client==0.7.5
+psycopg2==2.4.5
+pyOpenSSL==0.13
+pycrypto==2.6.1
+pycups==1.9.66
+pygobject==3.12.0
+pyserial==2.6
+pysmbc==1.0.14.1
+python-apt==0.9.3.5ubuntu2
+python-debian==0.1.21-nmu2ubuntu2
+pyxdg==0.25
+pyzmq==16.0.2
+reportlab==3.0
+requests==2.2.1
+scoop==0.7.1.1
+sessioninstaller==0.0.0
+six==1.10.0
+software-center-aptd-plugins==0.0.0
+ssh-import-id==3.21
+stevedore==1.24.0
+system-service==0.1.6
+unity-lens-photos==1.0
+urllib3==1.7.1
+virtualenv==15.1.0
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.2
+wheel==0.24.0
+wsgiref==0.1.2
+xdiagnose==3.6.3build2
+zope.interface==4.0.5
